- added parameter <constraints/indicator/maxConditionAltLP> to enable a quality check for the solution of the alternative LP 
- moved parameters for pseudoboolean constraints from opb-reader to pseudoboolean constraint handler
- new parameter for pseudoboolean constraints <constraints/pseudoboolean/decompose>, to transform pseudoboolean constraints into linear- and and-constraints
- added parameter <constraints/quadratic/maxproprounds> to limit the number of propagations rounds for quadratic constraints within one propagation round of SCIP
- added parameter <branching/lpgainnormalize> to set the strategy how the LP gain for a continuous variable is normalized when updating the variables pseudocosts:
  default is to divide LP gain by reduction of variable's domain in sibling node
- added parameter <branching/delaypscostupdate> to delay the update of pseudo costs for continuous variables behind the separation round: default is TRUE
- changed possible parameter values of <branching/pscost/strategy> from "bri" to "cdsu": default is now 'u', i.e., to estimate the LP gain by a branching for
  external branching candidates (esp. continuous variables) the same way as their pseudo costs are updated
- added possible value 'd' for <constraints/soc/nlpform> to choose a convex division form for SOC constraint representation in NLP
- added parameters <lp/resolveitermin> and <lp/resolveiterfac> to limit the number of LP iterations in resolving calls: resolveiterfac is a factor 
  by which the average number of iterations per call is multiplied to get the limit, but the limit is at least resolveitermin; default is
  -1 (no limit) for resolveiterfac and 1000 for resolveitermin
- added parameter <constraints/indicator/genBilinear> to generate bilinear (quadratic) constraints instead of indicator constraints
- added parameter <timing/reading> to add reading time to solving time

features:
- flatzinc reader is now capable to read cumulative constraints