@@ -91,7 +91,8 @@ parameters:
 - added parameter <constraints/indicator/maxConditionAltLP> to enable a quality check for the solution of the alternative LP 
 - moved parameters for pseudoboolean constraints from opb-reader to pseudoboolean constraint handler
 - new parameter for pseudoboolean constraints <constraints/pseudoboolean/decompose>, to transform pseudoboolean constraints into linear- and and-constraints
-- added parameter <constraints/quadratic/maxproprounds> to limit the number of propagations rounds for quadratic constraints within one propagation round of SCIP
+- added parameters <constraints/quadratic/maxproprounds> and <constraints/quadratic/maxproproundspresolve> to limit the number of propagations rounds for
+  quadratic constraints within one propagation round of SCIP solve or during SCIP presolve
 - added parameter <branching/lpgainnormalize> to set the strategy how the LP gain for a continuous variable is normalized when updating the variables pseudocosts:
   default is to divide LP gain by reduction of variable's domain in sibling node
 - added parameter <branching/delaypscostupdate> to delay the update of pseudo costs for continuous variables behind the separation round: default is TRUE
